unpackaged/main/default/objects/Credit_Review__c/fields/CR_Decline_Date__c.field-meta.xml
<CustomField>
    <fullName>CR_Decline_Date__c</fullName>
    <description>This field will capture the date that a Credit Review is declined.</description>
    <inlineHelpText>This field will capture the date that a Credit Review is declined.</inlineHelpText>
    <label>CR Decline Date</label>
    <type>Date</type>
</CustomField>