unpackaged/main/default/objects/Credit_Review__c/fields/Create_WC_Decision_Record__c.field-meta.xml
<CustomField>
    <fullName>Create_WC_Decision_Record__c</fullName>
    <label>Create WC Decision Record</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Create</fullName>
            </value>
            <value>
                <fullName>Ready</fullName>
                <default>true</default>
                <label>Ready</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>