unpackaged/main/default/objects/Credit_Review__c/fields/Credit_Approval_Notes__c.field-meta.xml
<CustomField>
    <fullName>Credit_Approval_Notes__c</fullName>
    <description>This field will capture notes that need to be included on the approval.</description>
    <label>Credit Approval Notes</label>
    <type>TextArea</type>
</CustomField>