unpackaged/main/default/objects/Credit_Review__c/fields/Credit_Review_2__c.field-meta.xml
<CustomField>
    <fullName>Credit_Review_2__c</fullName>
    <formula>IF(
	$User.Sales_User__c = True,
	HYPERLINK('https://nf----c.visualforce.com/apex/CreditReviewScreen_new?id=' + Id, 'View'),
	HYPERLINK( $Setup.Instance_Settings__c.Salesforce_URL__c + Id + '?&amp;nooverride=1', 'View')
	)</formula>
    <label>Credit Review 2</label>
    <type>Text</type>
</CustomField>