unpackaged/main/default/objects/Credit_Review__c/fields/Credit_Review_Version__c.field-meta.xml
<CustomField>
    <fullName>Credit_Review_Version__c</fullName>
    <label>Credit Review Version</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Version 1</fullName>
            </value>
            <value>
                <fullName>Version 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>