unpackaged/main/default/objects/Credit_Review__c/fields/Credit_Stip2__c.field-meta.xml
<CustomField>
    <fullName>Credit_Stip2__c</fullName>
    <label>Credit Stip2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Address Verification</fullName>
            </value>
            <value>
                <fullName>Discovery Call</fullName>
            </value>
            <value>
                <fullName>Full 6 Months Banks for &gt; $175k</fullName>
            </value>
            <value>
                <fullName>Full Statement</fullName>
            </value>
            <value>
                <fullName>Landlord Reference</fullName>
            </value>
            <value>
                <fullName>Lease Agreement</fullName>
            </value>
            <value>
                <fullName>Legal Name Verification</fullName>
            </value>
            <value>
                <fullName>License Verification</fullName>
            </value>
            <value>
                <fullName>MTD - Inquiries</fullName>
            </value>
            <value>
                <fullName>MTD - Low ending balance</fullName>
            </value>
            <value>
                <fullName>MTD Required Day of Funding</fullName>
            </value>
            <value>
                <fullName>Official Bank Statement</fullName>
            </value>
            <value>
                <fullName>Ownership</fullName>
            </value>
            <value>
                <fullName>Phone Verification</fullName>
            </value>
            <value>
                <fullName>Proof Mortgage Current</fullName>
            </value>
            <value>
                <fullName>Proof of Fleet</fullName>
            </value>
            <value>
                <fullName>Public Record Payment Plans</fullName>
            </value>
            <value>
                <fullName>Site Inspection Required</fullName>
            </value>
            <value>
                <fullName>Tax Return</fullName>
            </value>
            <value>
                <fullName>Tax Return for &gt;$175k</fullName>
            </value>
            <value>
                <fullName>Tax Return for &gt;$300k – Renewal</fullName>
            </value>
            <value>
                <fullName>UCC Clarification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>