unpackaged/main/default/objects/Credit_Review__c/fields/Credit_Stip_1__c.field-meta.xml
<CustomField>
    <fullName>Credit_Stip_1__c</fullName>
    <label>Credit Stip #1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>