unpackaged/main/default/objects/Credit_Review__c/fields/Credit_Stip_1_Reason__c.field-meta.xml
<CustomField>
    <fullName>Credit_Stip_1_Reason__c</fullName>
    <label>Credit Stip 1 Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>