unpackaged/main/default/objects/Credit_Review__c/fields/Credit_Stip_3_Reason__c.field-meta.xml
<CustomField>
    <fullName>Credit_Stip_3_Reason__c</fullName>
    <label>Credit Stip 3 Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>