unpackaged/main/default/objects/Credit_Review__c/fields/Credit_Stip_Funding_Requirement_2__c.field-meta.xml
<CustomField>
    <fullName>Credit_Stip_Funding_Requirement_2__c</fullName>
    <label>Credit Stip Funding Requirement 2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bank Verification</fullName>
            </value>
            <value>
                <fullName>Citizen Verification</fullName>
            </value>
            <value>
                <fullName>Cross Corporate Guaranty</fullName>
            </value>
            <value>
                <fullName>Dual ACH</fullName>
            </value>
            <value>
                <fullName>Form 8821</fullName>
            </value>
            <value>
                <fullName>Fraud Alert Verification</fullName>
            </value>
            <value>
                <fullName>Funding Layering Question</fullName>
            </value>
            <value>
                <fullName>Landlord Reference</fullName>
            </value>
            <value>
                <fullName>Lender Payoff</fullName>
            </value>
            <value>
                <fullName>Main Signor Clarification</fullName>
            </value>
            <value>
                <fullName>Second Position</fullName>
            </value>
            <value>
                <fullName>Secretary of State to be Active</fullName>
            </value>
            <value>
                <fullName>Welcome Call Required</fullName>
            </value>
            <value>
                <fullName>COVID Addendum</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>