unpackaged/main/default/objects/Credit_Review__c/fields/Credit_Stip_Funding_Requirement_2_Reason__c.field-meta.xml
<CustomField>
    <fullName>Credit_Stip_Funding_Requirement_2_Reason__c</fullName>
    <label>Credit Stip Funding Requirement 2 Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>