unpackaged/main/default/objects/Credit_Review__c/fields/Credit_Stip_Funding_Requirement_Other__c.field-meta.xml
<CustomField>
    <fullName>Credit_Stip_Funding_Requirement_Other__c</fullName>
    <label>Credit Stip Funding Requirement - Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>