unpackaged/main/default/objects/Credit_Review__c/fields/Credit_Stips_Other__c.field-meta.xml
<CustomField>
    <fullName>Credit_Stips_Other__c</fullName>
    <label>Credit Stips - Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>