unpackaged/main/default/objects/Credit_Review__c/fields/Deal_Origination__c.field-meta.xml
<CustomField>
    <fullName>Deal_Origination__c</fullName>
    <formula>Opportunity__r.RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Origination</label>
    <type>Text</type>
</CustomField>