unpackaged/main/default/objects/Credit_Review__c/fields/Deal_Type__c.field-meta.xml
<CustomField>
    <fullName>Deal_Type__c</fullName>
    <formula>TEXT(Opportunity__r.Type)</formula>
    <label>Deal Type</label>
    <type>Text</type>
</CustomField>