unpackaged/main/default/objects/Credit_Review__c/fields/Debt_Consolidation_Detected__c.field-meta.xml
<CustomField>
    <fullName>Debt_Consolidation_Detected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Debt Consolidation Detected</label>
    <type>Checkbox</type>
</CustomField>