unpackaged/main/default/objects/Credit_Review__c/fields/Decline_Other_Reason__c.field-meta.xml
<CustomField>
    <fullName>Decline_Other_Reason__c</fullName>
    <label>Decline Other Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>