unpackaged/main/default/objects/Credit_Review__c/fields/Decline_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Decline_Reasons__c</fullName>
    <label>Decline Reasons</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Credit - No Open Trade Lines</fullName>
            </value>
            <value>
                <fullName>Credit - Derogatory Trade Lines</fullName>
            </value>
            <value>
                <fullName>Credit - Fico Below Minimum</fullName>
            </value>
            <value>
                <fullName>Credit - Insufficient History</fullName>
            </value>
            <value>
                <fullName>Banks - Excessive NSF</fullName>
            </value>
            <value>
                <fullName>Banks - Irregular Bank Activity</fullName>
            </value>
            <value>
                <fullName>Banks - Low Balances</fullName>
            </value>
            <value>
                <fullName>Banks - Low Deposits</fullName>
            </value>
            <value>
                <fullName>Banks - Volatile Revenue</fullName>
            </value>
            <value>
                <fullName>Excessive Bankruptcies</fullName>
            </value>
            <value>
                <fullName>Excessive Judgments/Liens</fullName>
            </value>
            <value>
                <fullName>Restricted Industry</fullName>
            </value>
            <value>
                <fullName>Insufficient Time In Business</fullName>
            </value>
            <value>
                <fullName>Unconfirmed Documents</fullName>
            </value>
            <value>
                <fullName>Lack of Personal Guarantees</fullName>
            </value>
            <value>
                <fullName>History of Daily/Weekly Loan Payments</fullName>
            </value>
            <value>
                <fullName>Competitor Payoff Exceeds Limit</fullName>
            </value>
            <value>
                <fullName>Existing Customer/Signed Contract</fullName>
            </value>
            <value>
                <fullName>Absentee Ownership</fullName>
            </value>
            <value>
                <fullName>Lack of Business History</fullName>
            </value>
            <value>
                <fullName>No Business Bank Account</fullName>
            </value>
            <value>
                <fullName>Incomplete Application</fullName>
            </value>
            <value>
                <fullName>Previous Poor Pay History with National Funding</fullName>
            </value>
            <value>
                <fullName>Poor Pay History w/Competitor</fullName>
            </value>
            <value>
                <fullName>Insufficient Financials</fullName>
            </value>
            <value>
                <fullName>Existing Customer/ Max Exposure</fullName>
            </value>
            <value>
                <fullName>Character Issues</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Industry Parameters</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>