unpackaged/main/default/objects/Credit_Review__c/fields/Diamond_Recommended_Approval__c.field-meta.xml
<CustomField>
    <fullName>Diamond_Recommended_Approval__c</fullName>
    <description>This field will be populated by Apex Trigger based on the model's calculations.  This will be read only for users.</description>
    <inlineHelpText>This field will be populated by Apex Trigger based on the model's calculations.  This will be read only for users.</inlineHelpText>
    <label>Diamond Recommended Approval</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>