unpackaged/main/default/objects/Credit_Review__c/fields/eNoah_Review_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>eNoah_Review_Completed_Date__c</fullName>
    <description>This field will capture the date/time that the eNoah review process is completed the first time they indicate that it has been completed.</description>
    <inlineHelpText>This field will capture the date/time that the eNoah review process is completed the first time they indicate that it has been completed.</inlineHelpText>
    <label>eNoah Review Completed Date</label>
    <type>DateTime</type>
</CustomField>