unpackaged/main/default/objects/Credit_Review__c/fields/EXP_Business_Summary__c.field-meta.xml
<CustomField>
    <fullName>EXP_Business_Summary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EXP Business Summary</label>
    <referenceTo>Business_Credit_Summary__c</referenceTo>
    <relationshipLabel>Credit Reviews (EXP Business)</relationshipLabel>
    <relationshipName>Credit_Reviews_EXP_Business</relationshipName>
    <type>Lookup</type>
</CustomField>