unpackaged/main/default/objects/Credit_Review__c/fields/FC_Done_Bank_Statements__c.field-meta.xml
<CustomField>
    <fullName>FC_Done_Bank_Statements__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FC - Done - Bank Statements</label>
    <type>Checkbox</type>
</CustomField>