unpackaged/main/default/objects/Credit_Review__c/fields/FC_Done_SDN_Search_Completed_Attached__c.field-meta.xml
<CustomField>
    <fullName>FC_Done_SDN_Search_Completed_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FC Done SDN Search Completed + Attached</label>
    <type>Checkbox</type>
</CustomField>