unpackaged/main/default/objects/Credit_Review__c/fields/FC_Done_Signed_Application__c.field-meta.xml
<CustomField>
    <fullName>FC_Done_Signed_Application__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FC - Done - Signed Application</label>
    <type>Checkbox</type>
</CustomField>