unpackaged/main/default/objects/Credit_Review__c/fields/FC_Notes_Bank_Statements__c.field-meta.xml
<CustomField>
    <fullName>FC_Notes_Bank_Statements__c</fullName>
    <label>FC - Notes - Bank Statements</label>
    <type>TextArea</type>
</CustomField>