unpackaged/main/default/objects/Credit_Review__c/fields/FC_Notes_SDN_Search_Completed_Attached__c.field-meta.xml
<CustomField>
    <fullName>FC_Notes_SDN_Search_Completed_Attached__c</fullName>
    <label>FC Notes SDN Search Completed  Attached</label>
    <type>TextArea</type>
</CustomField>