unpackaged/main/default/objects/Credit_Review__c/fields/FC_Notes_Signed_Application__c.field-meta.xml
<CustomField>
    <fullName>FC_Notes_Signed_Application__c</fullName>
    <label>FC - Notes - Signed Application</label>
    <type>TextArea</type>
</CustomField>