unpackaged/main/default/objects/Credit_Review__c/fields/FC_Notes_SOS__c.field-meta.xml
<CustomField>
    <fullName>FC_Notes_SOS__c</fullName>
    <label>FC - Notes - SOS</label>
    <type>TextArea</type>
</CustomField>