unpackaged/main/default/objects/Credit_Review__c/fields/FC_Notes_Tax_Return__c.field-meta.xml
<CustomField>
    <fullName>FC_Notes_Tax_Return__c</fullName>
    <label>FC - Notes - Tax Return</label>
    <type>TextArea</type>
</CustomField>