unpackaged/main/default/objects/Credit_Review__c/fields/FC_Stip_Bank_Statements__c.field-meta.xml
<CustomField>
    <fullName>FC_Stip_Bank_Statements__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FC - Stip - Bank Statements</label>
    <type>Checkbox</type>
</CustomField>