unpackaged/main/default/objects/Credit_Review__c/fields/FC_Stip_Notes_Bank_Statements__c.field-meta.xml
<CustomField>
    <fullName>FC_Stip_Notes_Bank_Statements__c</fullName>
    <label>FC Stip Notes Bank Statements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>