unpackaged/main/default/objects/Credit_Review__c/fields/FC_Stip_Notes_Signed_Application__c.field-meta.xml
<CustomField>
    <fullName>FC_Stip_Notes_Signed_Application__c</fullName>
    <label>FC Stip Notes Signed Application</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>