unpackaged/main/default/objects/Credit_Review__c/fields/FC_Stip_Notes_Tax_Return__c.field-meta.xml
<CustomField>
    <fullName>FC_Stip_Notes_Tax_Return__c</fullName>
    <label>FC Stip Notes Tax Return</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>