unpackaged/main/default/objects/Credit_Review__c/fields/FC_Stip_SDN_Search_Completed_Attached__c.field-meta.xml
<CustomField>
    <fullName>FC_Stip_SDN_Search_Completed_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FC  Stip  SDN Search Completed  Attached</label>
    <type>Checkbox</type>
</CustomField>