unpackaged/main/default/objects/Credit_Review__c/fields/FC_Stip_SOS__c.field-meta.xml
<CustomField>
    <fullName>FC_Stip_SOS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FC - Stip - SOS</label>
    <type>Checkbox</type>
</CustomField>