unpackaged/main/default/objects/Credit_Review__c/fields/FC_Stip_Tax_Return__c.field-meta.xml
<CustomField>
    <fullName>FC_Stip_Tax_Return__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FC - Stip - Tax Return</label>
    <type>Checkbox</type>
</CustomField>