unpackaged/main/default/objects/Credit_Review__c/fields/FCStipNoteSDNSearchCompleted_Attached__c.field-meta.xml
<CustomField>
    <fullName>FCStipNoteSDNSearchCompleted_Attached__c</fullName>
    <label>FCStipNoteSDNSearchCompleted Attached</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>