unpackaged/main/default/objects/Credit_Review__c/fields/Final_Checklist_Notes__c.field-meta.xml
<CustomField>
    <fullName>Final_Checklist_Notes__c</fullName>
    <label>Final Checklist Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>