unpackaged/main/default/objects/Credit_Review__c/fields/Financial_Analysis_By__c.field-meta.xml
<CustomField>
    <fullName>Financial_Analysis_By__c</fullName>
    <label>Financial Analysis By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>