unpackaged/main/default/objects/Credit_Review__c/fields/Financial_Analysis_Date__c.field-meta.xml
<CustomField>
    <fullName>Financial_Analysis_Date__c</fullName>
    <label>Financial Analysis Date</label>
    <type>DateTime</type>
</CustomField>