unpackaged/main/default/objects/Credit_Review__c/fields/GIS_Done_Miscellaneous_Search__c.field-meta.xml
<CustomField>
    <fullName>GIS_Done_Miscellaneous_Search__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GIS Done Miscellaneous Search</label>
    <type>Checkbox</type>
</CustomField>