unpackaged/main/default/objects/Credit_Review__c/fields/GIS_Name_Miscellaneous_Search__c.field-meta.xml
<CustomField>
    <fullName>GIS_Name_Miscellaneous_Search__c</fullName>
    <label>GIS Name Miscellaneous Search</label>
    <length>200</length>
    <type>Text</type>
</CustomField>