unpackaged/main/default/objects/Credit_Review__c/fields/GIS_Notes_Miscellaneous_Search__c.field-meta.xml
<CustomField>
    <fullName>GIS_Notes_Miscellaneous_Search__c</fullName>
    <label>GIS Notes Miscellaneous Search</label>
    <type>TextArea</type>
</CustomField>