unpackaged/main/default/objects/Credit_Review__c/fields/GIS_Stip_Notes_Miscellaneous_Search__c.field-meta.xml
<CustomField>
    <fullName>GIS_Stip_Notes_Miscellaneous_Search__c</fullName>
    <label>GIS Stip Notes Miscellaneous Search</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>