unpackaged/main/default/objects/Credit_Review__c/fields/Google_Search_Notes__c.field-meta.xml
<CustomField>
    <fullName>Google_Search_Notes__c</fullName>
    <label>Google Search Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>