unpackaged/main/default/objects/Credit_Review__c/fields/GSI_Done_Business_Address__c.field-meta.xml
<CustomField>
    <fullName>GSI_Done_Business_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GSI - Done - Business Address</label>
    <type>Checkbox</type>
</CustomField>