unpackaged/main/default/objects/Credit_Review__c/fields/GSI_Done_Google_Search__c.field-meta.xml
<CustomField>
    <fullName>GSI_Done_Google_Search__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GSI - Done - Google Search</label>
    <type>Checkbox</type>
</CustomField>