unpackaged/main/default/objects/Credit_Review__c/fields/GSI_Done_Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>GSI_Done_Legal_Name__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GSI - Done - Legal Name</label>
    <type>Checkbox</type>
</CustomField>