unpackaged/main/default/objects/Credit_Review__c/fields/GSI_Done_PG3__c.field-meta.xml
<CustomField>
    <fullName>GSI_Done_PG3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GSI - Done - PG3</label>
    <type>Checkbox</type>
</CustomField>