unpackaged/main/default/objects/Credit_Review__c/fields/GSI_Done_PO_Box_Address__c.field-meta.xml
<CustomField>
    <fullName>GSI_Done_PO_Box_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GSI - Done - PO Box Address</label>
    <type>Checkbox</type>
</CustomField>